fixed Overflow

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,6 @@
   text-align: center;
 }
 
-.nav {
+/* .nav {
   background-color: white;
-}
+} */
